update sections in indek

--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
 	<!--<![endif]-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-
+	<div id="fullPage">
+		<section class="section">
+			<div class="pure-g">
+				<div class="pure-u pure-u-lg-1-2"></div>
+				<div class="pure-u pure-u-lg-1-2"></div>
+			</div>
+		</section>
+		<section class="section"></section>
+		<section class="section"></section>
+		<section class="section"></section>
+		<section class="section"></section>
+		<section class="section"></section>
+		<section class="section"></section>
+	</div>
 </body>
 </html>
