--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Loaded Dice - simulate a life story and understand inequality</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="build/bundle.js" charset="utf-8"></script>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-	<!--[if lte IE 8]>
+    <title>Loaded Dice - simulate a life story and understand inequality</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="build/bundle.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <!--[if lte IE 8]>
 	    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
 	<![endif]-->
-	<!--[if gt IE 8]><!-->
-	    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
-	<!--<![endif]-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+    <!--<![endif]-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"></script>
 </head>
+
 <body>
-	<div id="fullPage">
-		<section class="section">
-			<div class="pure-g">
-				<div class="pure-u pure-u-lg-1-2"></div>
-				<div class="pure-u pure-u-lg-1-2"></div>
-			</div>
-		</section>
-		<section class="section"></section>
-		<section class="section"></section>
-		<section class="section"></section>
-		<section class="section"></section>
-		<section class="section"></section>
-		<section class="section"></section>
-	</div>
+    <div id="fullPage">
+        <section class="section">
+            <div class="pure-g">
+                <div class="pure-u pure-u-md-1-2">
+                    <div class="l-box">
+                        <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                    </div>
+                </div>
+                <div class="pure-u pure-u-md-1-2">
+                    <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                </div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="pure-g">
+                <div class="pure-u pure-u-md-1-2">
+                    <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                </div>
+                <div class="pure-u pure-u-md-1-2">
+                    <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                </div>
+            </div>
+        </section>
+        <section class="section"></section>
+        <section class="section"></section>
+        <section class="section"></section>
+        <section class="section"></section>
+        <section class="section"></section>
+    </div>
 </body>
+
 </html>
