--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         <section class="section">
             <div class="pure-g">
                 <div class="pure-u pure-u-md-1-2">
-                    <div class="l-box">
+                    <div class="character">
                         <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
                     </div>
                 </div>
                 <div class="pure-u pure-u-md-1-2">
-                    <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                    <div class="character">
+                        <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                    </div>
                 </div>
             </div>
         </section>
