--- a/index.html
+++ b/index.html
@@ -21,29 +21,34 @@
     <div id="fullPage">
         <section class="section">
             <div class="pure-g">
-                <div class="pure-u pure-u-md-1-2">
-                    <div class="character">
-                        <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
-                    </div>
+                <div class="pure-u pure-u-md-1-4 offset-md-1-5">
+                        <img class="pure-img" src="/Assests/Images/1-y.png">
                 </div>
-                <div class="pure-u pure-u-md-1-2">
-                    <div class="character">
-                        <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
-                    </div>
+                <div class="pure-u pure-u-md-1-4 offset-md-1-5">
+                        <img class="pure-img" src="/Assests/Images/2-y.png">
                 </div>
             </div>
         </section>
         <section class="section">
-            <div class="pure-g">
-                <div class="pure-u pure-u-md-1-2">
-                    <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+             <div class="pure-g">
+                <div class="pure-u pure-u-md-1-4 offset-md-1-5">
+                        <img class="pure-img" src="/Assests/Images/1-s.png">
                 </div>
-                <div class="pure-u pure-u-md-1-2">
-                    <img src="https://www.headspace.com/bundles/headspacesite/images/v2/home/hero-ten-minutes.png">
+                <div class="pure-u pure-u-md-1-4 offset-md-1-5">
+                        <img class="pure-img" src="/Assests/Images/2-h.png">
                 </div>
             </div>
         </section>
-        <section class="section"></section>
+                <section class="section">
+             <div class="pure-g">
+                <div class="pure-u pure-u-md-1-4 offset-md-1-5">
+                        <img class="pure-img" src="/Assests/Images/1-s.png">
+                </div>
+                <div class="pure-u pure-u-md-1-4 offset-md-1-5">
+                        <img class="pure-img" src="/Assests/Images/2-h.png">
+                </div>
+            </div>
+        </section>
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
