Rename assets and images folders
  * correcting typo
  * only lowercase

--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
         <section class="section">
             <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/1-y.png">
+                        <img class="pure-img" src="/assets/images/1-y.png">
                 </div>
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/2-y.png">
+                        <img class="pure-img" src="/assets/images/2-y.png">
                 </div>
             </div>
         </section>
         <section class="section">
              <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/1-s.png">
+                        <img class="pure-img" src="/assets/images/1-s.png">
                 </div>
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/2-h.png">
+                        <img class="pure-img" src="/assets/images/2-h.png">
                 </div>
             </div>
         </section>
                 <section class="section">
              <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/1-s.png">
+                        <img class="pure-img" src="/assets/images/1-s.png">
                 </div>
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/2-h.png">
+                        <img class="pure-img" src="/assets/images/2-h.png">
                 </div>
             </div>
         </section>
