Basic main page
  * fake data to generate select
  * add background image (open source)
  https://en.wikipedia.org/wiki/File:Wellington_at_dawn.jpg
  * some styles

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
 
 <body>
     <div id="fullPage">
+        <section class="section" id="section-1">
+            <h1 class="section-title">Playing field</h1>
+            <div class="pure-g">
+                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
+                    <select class="select-area">
+                       <option value='default' disabled selected>Pick an area</option>
+                    </select>
+                </div>
+                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
+                    <select class="select-area">
+                        <option value='default' disabled selected>Pick an area</option>
+                    </select>
+                </div>
+            </div>
+        </section>
         <section class="section">
             <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
