Some work in progress for the second page

--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
         <section class="section">
             <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/assets/images/1-y.png">
+                    <img class="pure-img" src="/assets/images/1-y.png">
+                    <h1>Sal</h1>
+                    <p>Thinks dinosaurs are probably still around.</p>
                 </div>
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/assets/images/2-y.png">
+                    <img class="pure-img" src="/assets/images/2-y.png">
+                    <h1>Alex</h1>
+                    <p>Loves giraffes.</p>
                 </div>
+            </div>
+            <div class="pure-g">
+                <button class="button-start pure-u-md-1-4 offset-md-2-5">
+                    Roll the dice
+                </button>
             </div>
         </section>
         <section class="section">
