--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
 
 <body>
     <div id="fullPage">
+        <section class="section responsive">
+            <div class="pure-g">
+                <div class="pure-u-1-1  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                        <img class="pure-img center" src="/Assests/Images/1-y.png">
+                </div>
+                <div class="pure-u-1-1 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6">
+                        <img class="pure-img center" src="/Assests/Images/2-y.png">
+                </div>
+            </div>
+        </section>
         <section class="section">
             <div class="pure-g">
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/1-y.png">
+                <div class="pure-u-1-1  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                        <img class="pure-img center" src="/Assests/Images/1-h.png">
                 </div>
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/2-y.png">
+                <div class="pure-u-1-1 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6">
+                        <img class="pure-img center" src="/Assests/Images/2-s.png">
                 </div>
             </div>
         </section>
         <section class="section">
-             <div class="pure-g">
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/1-s.png">
+            <div class="pure-g">
+                <div class="pure-u-1-1  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                        <img class="pure-img center" src="/Assests/Images/1-s.png">
                 </div>
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/2-h.png">
-                </div>
-            </div>
-        </section>
-                <section class="section">
-             <div class="pure-g">
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/1-s.png">
-                </div>
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-                        <img class="pure-img" src="/Assests/Images/2-h.png">
+                <div class="pure-u-1-1 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6">
+                        <img class="pure-img center" src="/Assests/Images/2-h.png">
                 </div>
             </div>
         </section>
