--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Loaded Dice - simulate a life story and understand inequality</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="build/bundle.js" charset="utf-8"></script>
+
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <!--[if lte IE 8]>
 	    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
@@ -13,19 +12,23 @@
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
     <!--<![endif]-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"></script>
+    <script type="text/javascript" src="build/bundle.js" charset="utf-8"></script>
+
 </head>
 
 <body>
     <div id="fullPage">
         <section class="section responsive">
             <div class="pure-g">
-                <div class="pure-u-1-1  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                        <img class="pure-img center" src="/Assests/Images/1-y.png">
+                <div class="pure-u-5-6  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                        <img class="pure-img center small no-margin" src="/Assests/Images/1-y.png">
                 </div>
-                <div class="pure-u-1-1 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6">
-                        <img class="pure-img center" src="/Assests/Images/2-y.png">
+                <div class="pure-u-5-6 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
+                        <img class="pure-img center small right no-margin" src="/Assests/Images/2-y.png">
                 </div>
             </div>
         </section>
