--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <section class="section responsive">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                   <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
-                    <h1>Sal</h1>
-                    <p>Thinks dinosaurs are probably still around.</p>
+                    <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
+                    <h1 class='presentation-name'></h1>
+                    <p class='presentation-description'></p>
                 </div>
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12  offset-md-1-6 right-offset">
                     <img class="pure-img center small no-margin res-right" src="/assets/images/avatars/2-y.png">
-                    <h1 class="text-right">Alex</h1>
-                    <p class="text-right">Loves giraffes.</p>
+                    <h1 class='presentation-name'></h1>
+                    <p class='presentation-description'></p>
                 </div>
             </div>
         </section>
