--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <div id="fullPage">
+    	<!-- map selection -->
         <section class="section" id="section-1">
             <h1 class="section-title">Playing field</h1>
             <div class="pure-g">
@@ -34,10 +35,11 @@
                 </div>
             </div>
         </section>
+        <!-- present users with characters -->
         <section class="section responsive">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                    <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
+                   <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
                     <h1>Sal</h1>
                     <p>Thinks dinosaurs are probably still around.</p>
                 </div>
@@ -48,6 +50,18 @@
                 </div>
             </div>
         </section>
+        <!-- life real - log -->
+        <section class="section responsive">
+            <div class="pure-g">
+                <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+			<div id="log-a"></div>
+                </div>
+                <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
+			<div id="log-b"></div>
+                </div>
+            </div>
+        </section>
+        <!-- Report -->
         <section class="section responsive">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
