change section to div

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="fullPage">
         <!-- map selection -->
-        <section class="section" id="section-1">
+        <div class="section" id="section-1">
             <h1 class="section-title">Playing field</h1>
             <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
@@ -34,9 +34,9 @@
                     </select>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- present users with characters -->
-        <section class="section responsive">
+        <div class="section responsive">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
@@ -49,10 +49,10 @@
                     <p class='presentation-description'></p>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- life real - log -->
-        <section class="section responsive log">
-            <div class="pure-g">
+        <div  class="section responsive log">
+            <div class="pure-g log">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div id="log-a">
                         <div>
@@ -182,9 +182,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- Report -->
-        <section class="section responsive">
+        <div class="section responsive">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
@@ -197,7 +197,7 @@
                     <p class="text-right">Loves giraffes.</p>
                 </div>
             </div>
-        </section>
+        </div>
     </div>
 </body>
 
