--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="fullPage">
         <!-- map selection -->
-        <div class="section" id="section-1">
+        <div class="section" id="section1">
             <h1 class="section-title">Playing field</h1>
             <div class="pure-g">
                 <div class="pure-u pure-u-md-1-4 offset-md-1-6">
@@ -36,7 +36,7 @@
             </div>
         </div>
         <!-- present users with characters -->
-        <div class="section responsive">
+        <div class="section responsive" id="section2">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
@@ -51,7 +51,7 @@
             </div>
         </div>
         <!-- life real - log -->
-        <div  class="section responsive log">
+        <div  class="section responsive" id="section3">
             <div class="pure-g log">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div id="log-a">
@@ -184,7 +184,7 @@
             </div>
         </div>
         <!-- Report -->
-        <div class="section responsive">
+        <div class="section responsive" id="section4">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
