--- a/index.html
+++ b/index.html
@@ -24,47 +24,44 @@
 </head>
 
 <body>
-    <div id="map">
-      <button id="continue_button">Continue</button>
-    </div>
     <div id="fullPage">
-      <!--
-        <section class="section" id="section-1">
-            <h1 class="section-title">The Loaded Dice of Life</h1>
-            <div class="pure-g">
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-
-                    <select class="select-area">
-                        <option value='default' disabled selected>Pick an area</option>
-                    </select>
-                </div>
-                <div class="pure-u pure-u-md-1-4 offset-md-1-6">
-
-                    <select class="select-area">
-                        <option value='default' disabled selected>Pick an area</option>
-                    </select>
-                </div>
+        <section class="section active responsive">
+            <div id="map">
+                <button id="continue_button">Continue</button>
             </div>
         </section>
-        -->
-        <section id="story_start" class="section responsive">
-            <div class="pure-g">
-                <div class="pure-u-5-6  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                    <img class="pure-img center small no-margin res-left" src="/assets/images/1-y.png">
-                    <h1>Sal</h1>
-                    <p>Thinks dinosaurs are probably still around.</p>
-                </div>
-                <div class="pure-u-5-6 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
-                    <img class="pure-img center small no-margin res-right" src="/assets/images/2-y.png">
-                    <h1>Alex</h1>
-                    <p>Loves giraffes.</p>
-                </div>
-            </div>
-        </section>
+        <!-- present users with characters -->
         <section class="section responsive">
             <div class="pure-g">
-                <div class="pure-u-5-6  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                    <img class="pure-img center small no-margin res-left" src="/assets/images/1-y.png">
+                <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                    <img class="presentation-icon pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
+                    <h1 class='presentation-name'></h1>
+                    <p class='presentation-description'></p>
+                </div>
+                <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12  offset-md-1-6 right-offset">
+                    <img class="pure-img center small no-margin res-right" src="/assets/images/avatars/2-y.png">
+                    <h1 class='presentation-name'></h1>
+                    <p class='presentation-description'></p>
+                </div>
+            </div>
+            <div class="pure-g">
+                <div class="pure-u-1-1">
+                    <div id='roll-the-dice-button'>
+                        <img src='assets/images/dice.png' />
+                        <p>Roll the dice!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- life real - log -->
+        <section class="section responsive">
+            real life logs
+        </section>
+        <!-- Report -->
+        <section class="section responsive">
+            <div class="pure-g">
+                <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                    <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
                     <h1>Sal</h1>
                     <p>Thinks dinosaurs are probably still around.</p>
                 </div>
