--- a/index.html
+++ b/index.html
@@ -55,64 +55,64 @@
             <div class="pure-g log">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div id="log-a">
-                        <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        <div class="log">
+                        	<img class='pure-img event-icon'  src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Lorem ipsum dolor.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'  src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Velit, similique, natus!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Iste error, dolore?</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Ad, facere voluptas?</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Amet, repellendus, blanditiis!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Consectetur, officiis, quas.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Minima, ea corporis?</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Labore, facere, voluptatibus!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Consequatur, accusantium, qui.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Quidem animi, iure.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Cumque sit, nisi!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Aspernatur facere, laborum!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Quis, quae quisquam.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Eligendi, labore porro.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Explicabo, molestiae, libero!</p>
                         </div>
                     </div>
@@ -120,63 +120,63 @@
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
                     <div id="log-b">
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Lorem ipsum dolor.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Velit, similique, natus!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Iste error, dolore?</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Ad, facere voluptas?</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Amet, repellendus, blanditiis!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Consectetur, officiis, quas.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Minima, ea corporis?</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Labore, facere, voluptatibus!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Consequatur, accusantium, qui.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Quidem animi, iure.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Cumque sit, nisi!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Aspernatur facere, laborum!</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Quis, quae quisquam.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Eligendi, labore porro.</p>
                         </div>
                         <div>
-                        	<img src="./assets/images/fun/f-goldfish.png" alt="">
+                        	<img  class='pure-img event-icon'   src="./assets/images/fun/f-goldfish.png" alt="">
                         	<p>Explicabo, molestiae, libero!</p>
                         </div>
                     </div>
