add age groups and inject education form json

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div id="log-a">
                         <div class="log">
+                            <h2>0-14 years</h2>
+                        </div>
+                        <div class="log">
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Lorem ipsum dolor.</p>
                         </div>
@@ -68,9 +71,12 @@
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Iste error, dolore?</p>
                         </div>
+                        <div class="log">
+                            <h2>15-29 years</h2>
+                        </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Ad, facere voluptas?</p>
+                            <p class="class-age1">Ad, facere voluptas?</p>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -79,6 +85,9 @@
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Consectetur, officiis, quas.</p>
+                        </div>
+                        <div class="log">
+                            <h2>30-44 years</h2>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -92,9 +101,12 @@
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Consequatur, accusantium, qui.</p>
                         </div>
+                        <div class="log">
+                            <h2>45-65 years</h2>
+                        </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Quidem animi, iure.</p>
+                            <p id="age3">Quidem animi, iure.</p>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -103,6 +115,9 @@
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Aspernatur facere, laborum!</p>
+                        </div>
+                        <div class="log">
+                            <h2>65+ years</h2>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -120,6 +135,9 @@
                 </div>
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
                     <div id="log-b">
+                        <div class="log">
+                            <h2>0-14 years</h2>
+                        </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Lorem ipsum dolor.</p>
@@ -132,9 +150,12 @@
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Iste error, dolore?</p>
                         </div>
+                        <div class="log">
+                            <h2>15-29 years</h2>
+                        </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Ad, facere voluptas?</p>
+                            <p class="class-age2">Ad, facere voluptas?</p>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -143,6 +164,9 @@
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Consectetur, officiis, quas.</p>
+                        </div>
+                        <div class="log">
+                            <h2>30-44 years</h2>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -156,9 +180,12 @@
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Consequatur, accusantium, qui.</p>
                         </div>
+                        <div class="log">
+                            <h2>45-65 years</h2>
+                        </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Quidem animi, iure.</p>
+                            <p id="age3">Quidem animi, iure.</p>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -167,6 +194,9 @@
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
                             <p>Aspernatur facere, laborum!</p>
+                        </div>
+                        <div class="log">
+                            <h2>65+ years</h2>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
