added report stuff

--- a/index.html
+++ b/index.html
@@ -218,30 +218,30 @@
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div class="pure-u-1-1 report-card">
-                        <img class="pure-img center mini" src="/assets/images/avatars/1-y.png">
+                        <img class="pure-img center mini-image" src="/assets/images/avatars/1-y.png">
                         <h1 class='presentation-name-a'></h1>
                         <p class='presentation-description-a'></p>
                     </div>
                     <div class="pure-u-1-1">
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li class="class-age1"></li>
+                            <li class="class-house1"></li>
+                            <li class="class-age3"></li>
+                            <li class="class-age4"></li>
+                            <li class="class-age5"></li>
                         </ul>
                     </div>
                 </div>
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12  offset-md-1-6 right-offset">
                     <div class="pure-u-1-1 report-card">
-                        <img class="pure-img center mini" src="/assets/images/avatars/2-y.png">
+                        <img class="pure-img center mini-image" src="/assets/images/avatars/2-y.png">
                         <h1 class='presentation-name-b'></h1>
                         <p class='presentation-description-b'></p>
                     </div>
                     <div class="pure-u-1-1">
                         <ul>
-                            <li></li>
-                            <li></li>
+                            <li class="class-age2"></li>
+                            <li class="class-house2"></li>
                             <li></li>
                             <li></li>
                             <li></li>
