--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p id="age3">Quidem animi, iure.</p>
+                            <p class="class-house1">Quidem animi, iure.</p>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
@@ -185,7 +185,7 @@
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p id="age3">Quidem animi, iure.</p>
+                            <p class="class-house2">Quidem animi, iure.</p>
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
