--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- map selection -->
         <div class="section">
             <div id="map">
-                <button id="continue_button">Continue</button>
+                <div id="continue-button">Continue</div>
             </div>
         </div>
         <!-- present users with characters -->
