--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         </div>
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/fun/f-pimple.png" alt="">
-                           <!--  <p class="class-age1">Got a pimple</p> -->
-                           <p>Got a pimple</p>
+                            <!--  <p class="class-age1">Got a pimple</p> -->
+                            <p>Got a pimple</p>
                         </div>
                         <div class="log">
                             <h2>40 years old</h2>
@@ -102,7 +102,7 @@
                         <div>
                             <img class='pure-img event-icon' src="./assets/images/events/e-finishes-school.png" alt="">
                             <!-- <p class="class-age1">Leaves high-school doesnt go to University</p> -->
-                            <p >Leaves high-school doesnt go to University</p>
+                            <p>Leaves high-school doesnt go to University</p>
                         </div>
                         <div class="log">
                             <h2>40 years old</h2>
@@ -135,13 +135,21 @@
                     <div class="pure-u-1-1">
                         <ul>
                             <li class="class-age1">
-                            	<h2>5 years old</h2>
-                            	<p>Lives in a house where no one has a job</p>
+                                <h3>5 years old</h3>
+                                <p>Gold Fish Dies :(</p>
                             </li>
-                            <li class="class-house1"></li>
-                            <li class="class-age3"></li>
-                            <li class="class-age4"></li>
-                            <li class="class-age5"></li>
+                            <li class="class-house1">
+                                <h3>20 years old</h3>
+                                <p>Got a pimple</p>
+                            </li>
+                            <li class="class-age3">
+                                <h3>40 years old</h3>
+                                <p>Washing Machine Floods</p>
+                            </li>
+                            <li class="class-age4">
+                            	<h3>70 years old</h3>
+                            	<p>No Internet</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -153,11 +161,22 @@
                     </div>
                     <div class="pure-u-1-1">
                         <ul>
-                            <li class="class-age2"></li>
-                            <li class="class-house2"></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li class="class-age2">
+                                <h3>5 years old</h3>
+                                <p>Lives in a house where no one has a job</p>
+                            </li>
+                            <li class="class-house2">
+                                <h3>20 years old</h3>
+                                <p>Leaves high-school doesnt go to University</p>
+                            </li>
+                            <li class="class-age3">
+                                <h3>40 years old</h3>
+                                <p>Gets Dumped</p>
+                            </li>
+                            <li class="class-age4">
+                            	<h3>70 years old</h3>
+                            	<p>Still Renting</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
